feat:modify abstract processor